--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--  
- 	Copyright 2010 Cesar Valiente Gordo
+ 	Copyright 2011 Cesar Valiente Gordo
  
  	This file is part of QuiteSleep.
 
@@ -18,21 +18,13 @@
     You should have received a copy of the GNU General Public License
     along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
  -->
+ 
 
-<RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
-  android:orientation="vertical" >
-   
-  <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-  		android:layout_width="wrap_content"
-  		android:layout_height="wrap_content"
-  		android:id="@+id/deleteBanned_textview_name"  		
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:id="@+id/list_item" 
+  		android:layout_width="fill_parent"
+  		android:layout_height="wrap_content"  		  
+  		android:textColor="@android:color/white"	
   		android:textSize="25dip"
 	  	android:textStyle="bold"   		  		   	  	
 	  	android:text="name" />
-	  	 
-</RelativeLayout>
-
-
