Added ActionBarSherlock and viewPageIndicator functionality in all application (main and sub activities). Doesn't work lot of things regarding the functionality of the app, but it launchs ok, and the navigation using that two libraries is ok.

--- a/quitesleep_v3_branch/res/menu/addallmenu.xml
+++ b/quitesleep_v3_branch/res/menu/addallmenu.xml
@@ -24,6 +24,7 @@
 
     <item android:id="@+id/menu.addall"
         android:title="@string/menu.addall.label"
-        android:icon="@drawable/add_menu" />    
+        android:icon="@drawable/add_menu"
+        android:showAsAction="withText" />    
 
 </menu>
