--- a/quitesleep_v3_branch/res/layout/main.xml
+++ b/quitesleep_v3_branch/res/layout/main.xml
@@ -7,16 +7,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <com.viewpagerindicator.TabPageIndicator
+    <com.viewpagerindicator.TitlePageIndicator
         android:id="@+id/indicator"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        />
+        android:layout_width="fill_parent" />
+    
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        />
-
+        android:layout_weight="1" />
 </LinearLayout>
