--- a/quitesleep_v3_branch/res/menu/informationmenu.xml
+++ b/quitesleep_v3_branch/res/menu/informationmenu.xml
@@ -22,12 +22,14 @@
 <menu 
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/menu.information.about"
-        android:title="@string/menu.information.about"
-        android:icon="@drawable/info_menu" />    
+    <item android:id="@+id/menu_information_about"
+        android:title="@string/menu_information_about"
+        android:icon="@drawable/info_menu"
+        android:showAsAction="collapseActionView" />    
         
-    <item android:id="@+id/menu.information.help"
-        android:title="@string/menu.information.help"
-        android:icon="@drawable/help_menu" />
+    <item android:id="@+id/menu_information_help"
+        android:title="@string/menu_information_help"
+        android:icon="@drawable/help_menu"
+        android:showAsAction="collapseActionView" />
 
 </menu>
