New resources to use in the action bar following the guidelines. Dialog operations (in course)

--- a/quitesleep_v3_branch/res/menu/addallmenu.xml
+++ b/quitesleep_v3_branch/res/menu/addallmenu.xml
@@ -22,9 +22,9 @@
 <menu 
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/menu.addall"
+    <item android:id="@+id/menu_addall"
         android:title="@string/menu.addall.label"
         android:icon="@drawable/add_menu"
-        android:showAsAction="withText" />    
+        android:showAsAction="always" />    
 
 </menu>
