--- a/com_actionbarsherlock/res/layout/abs__action_mode_bar.xml
+++ b/com_actionbarsherlock/res/layout/abs__action_mode_bar.xml
@@ -18,7 +18,7 @@
 -->
 <com.actionbarsherlock.internal.widget.ActionBarContextView
      xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="fill_parent"
+     android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      style="?attr/actionModeStyle" />
