--- a/com_actionbarsherlock/res/layout/abs__action_mode_close_item.xml
+++ b/com_actionbarsherlock/res/layout/abs__action_mode_close_item.xml
@@ -21,7 +21,7 @@
         android:paddingLeft="8dip"
         style="?attr/actionModeCloseButtonStyle"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_marginRight="16dip">
     <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
