--- a/com_actionbarsherlock/res/layout/abs__list_menu_item_layout.xml
+++ b/com_actionbarsherlock/res/layout/abs__list_menu_item_layout.xml
@@ -15,7 +15,7 @@
 -->
 
 <com.actionbarsherlock.internal.view.menu.ListMenuItemView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="?attr/listPreferredItemHeightSmall">
     
     <!-- Icon will be inserted here. -->
@@ -32,7 +32,7 @@
         
         <TextView 
             android:id="@+id/abs__title"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
