--- a/quitesleep3/res/layout/configblockcalls.xml
+++ b/quitesleep3/res/layout/configblockcalls.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--  
+<!--
  	Copyright 2010 Cesar Valiente Gordo
  
  	This file is part of QuiteSleep.
@@ -17,85 +17,80 @@
 
     You should have received a copy of the GNU General Public License
     along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
- -->
-	
- 	<ScrollView
- 		xmlns:android="http://schemas.android.com/apk/res/android"
- 		android:layout_width="fill_parent"
- 		android:layout_height="fill_parent">
- 		
- 		<LinearLayout
- 			android:orientation="vertical"
- 			android:layout_width="fill_parent"
- 			android:layout_height="fill_parent" >
- 			
- 			<RadioGroup
- 				android:orientation="vertical"
- 				android:layout_width="fill_parent"
- 				android:layout_height="fill_parent" >
- 			 				
-	 			<!-- Block all incoming calls -->
-	 			<TextView
-	 				style="?android:attr/listSeparatorTextViewStyle"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.separator.blockall"
-	 				android:text="@string/configothercalls.separator.blockall"
-	 				android:layout_marginTop="5dip" />
-	 				
-	 			<RadioButton 
-	 				android:layout_width="fill_parent"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.radiobutton.blockall"
-	 				android:enabled="true"
-	 				android:checked="false" />
-	 				
-	 				
-	 			<!-- Block only the incoming calls from the blocked contacts -->
-	 			<TextView
-	 				style="?android:attr/listSeparatorTextViewStyle"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.separator.block_blocked_contacts"
-	 				android:text="@string/configothercalls.separator.block_blocked_contacts"
-	 				android:layout_marginTop="5dip" />
-	 				
-	 			<RadioButton 
-	 				android:layout_width="fill_parent"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.radiobutton.block_blocked_contacts"
-	 				android:enabled="true"
-	 				android:checked="false" />	 					 					 				 				
-	 				
-	 			<!-- Block unknown incomming calls -->
-	 			<TextView
-	 				style="?android:attr/listSeparatorTextViewStyle"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.separator.blockunknown"
-	 				android:text="@string/configothercalls.separator.blockunknown"
-	 				android:layout_marginTop="5dip" />
-	 				
-	 			<RadioButton 
-	 				android:layout_width="fill_parent"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.radiobutton.blockunknown"
-	 				android:enabled="true"
-	 				android:checked="false" />	 					 				 				 			
-	 				
-	 			<!-- Block all unknown incoming calls and the ones form blocked contacts -->
-				<TextView
-	 				style="?android:attr/listSeparatorTextViewStyle"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.separator.block_unknwown_and_blocked_contacts"
-	 				android:text="@string/configothercalls.separator.block_unknwown_and_blocked_contacts"
-	 				android:layout_marginTop="5dip" />
-	 				
-	 			<RadioButton 
-	 				android:layout_width="fill_parent"
-	 				android:layout_height="fill_parent"
-	 				android:id="@+id/configothercalls.radiobutton.block_unknwown_and_blocked_contacts"
-	 				android:enabled="true"
-	 				android:checked="false" />
-	 				
-	 		</RadioGroup>
-		</LinearLayout>				 				 			 				 				 				 		 	
-	</ScrollView>
+-->
 
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <!-- Block all incoming calls -->
+
+        <TextView
+            android:id="@+id/configothercalls.separator.blockall"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dip"
+            android:text="@string/configothercalls.separator.blockall" />
+
+        <RadioButton
+            android:id="@+id/configothercalls.radiobutton.blockall"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:checked="false"
+            android:enabled="true" />
+
+        <!-- Block only the incoming calls from the blocked contacts -->
+
+        <TextView
+            android:id="@+id/configothercalls.separator.block_blocked_contacts"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dip"
+            android:text="@string/configothercalls.separator.block_blocked_contacts" />
+
+        <RadioButton
+            android:id="@+id/configothercalls.radiobutton.block_blocked_contacts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:checked="false"
+            android:enabled="true" />
+
+        <!-- Block unknown incomming calls -->
+
+        <TextView
+            android:id="@+id/configothercalls.separator.blockunknown"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dip"
+            android:text="@string/configothercalls.separator.blockunknown" />
+
+        <RadioButton
+            android:id="@+id/configothercalls.radiobutton.blockunknown"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:checked="false"
+            android:enabled="true" />
+
+        <!-- Block all unknown incoming calls and the ones form blocked contacts -->
+
+        <TextView
+            android:id="@+id/configothercalls.separator.block_unknwown_and_blocked_contacts"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dip"
+            android:text="@string/configothercalls.separator.block_unknwown_and_blocked_contacts" />
+
+        <RadioButton
+            android:id="@+id/configothercalls.radiobutton.block_unknwown_and_blocked_contacts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:checked="false"
+            android:enabled="true" />
+    </RadioGroup>
+
+</ScrollView>
