--- a/quitesleep3/res/layout/contactstab.xml
+++ b/quitesleep3/res/layout/contactstab.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--  
+<!--
  	Copyright 2010 Cesar Valiente Gordo
  
  	This file is part of QuiteSleep.
@@ -17,88 +17,83 @@
 
     You should have received a copy of the GNU General Public License
     along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
- -->
+-->
 
-<LinearLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-                
-	<ScrollView 
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
 
-		<RelativeLayout
-  			xmlns:android="http://schemas.android.com/apk/res/android"
-  			android:orientation="vertical"
-  			android:layout_width="fill_parent"
-  			android:layout_height="fill_parent" >
-  
-  			<!-- Add banned contacts -->
-  			<TextView
-            	style="?android:attr/listSeparatorTextViewStyle"
-            	android:layout_height="fill_parent"
-            	android:id="@+id/contacts.separator.addContact"
-            	android:text="@string/contacts.separator.addContact"
-            	android:layout_marginTop="5dip" />            	           
-            	
-           	<Button
-           	    android:id="@+id/contacts.button.addBanned"   				  			
-           		android:layout_width="fill_parent"
-  				android:layout_height="wrap_content"
-  				android:layout_below="@id/contacts.separator.addContact"  				
-  				android:layout_centerHorizontal="true"  					  					  			
-  				android:drawableLeft="@drawable/add_user"  				
-  				android:text="@string/contacts.button.addBanned"
-  				style="@style/common_button_style"/>  	
-  				  					
-	  		<!-- Remove/edit blocked contact -->	  		
-  			<TextView
-            	style="?android:attr/listSeparatorTextViewStyle"
-            	android:layout_height="fill_parent"
-            	android:layout_below="@id/contacts.button.addBanned"
-            	android:id="@+id/contacts.separator.removeContact"
-            	android:text="@string/contacts.separator.removeContact"
-            	android:layout_marginTop="5dip" />            	           
-            		  		
-  			<Button  	    				
-  				android:id="@+id/contacts.button.deleteBanned"   	
-  				android:layout_width="fill_parent"
-  				android:layout_height="wrap_content"
-  				android:layout_below="@id/contacts.separator.removeContact"
-  				android:layout_centerHorizontal="true"  				
-  				android:drawableLeft="@drawable/remove_user"  				
-  				android:text="@string/contacts.button.deleteBanned"
-  				style="@style/common_button_style" />
-  			  					
-  			<!-- Synchronize contacts by the user -->
-  			<View
-				android:id="@+id/contacts.divider1"
-				android:layout_width="fill_parent"		
-				android:layout_height="3dip"		
-				android:layout_below="@id/contacts.button.deleteBanned"
-				android:background="@drawable/gradient_black"
-				android:layout_marginTop="5dp"		
-				android:layout_marginBottom="5dp" />
-  	
- 			<TextView
-            	style="?android:attr/listSeparatorTextViewStyle"
-            	android:layout_height="fill_parent"
-            	android:id="@+id/contacts.separator.syncContacts"
-            	android:text="@string/contacts.separator.syncContacts"
-            	android:layout_below="@id/contacts.divider1"
-            	android:layout_marginTop="5dip" />
-	
-			<Button  	  
-  				android:id="@+id/contacts.button.syncContacts" 
-  				android:layout_width="fill_parent"
-  				android:layout_height="wrap_content"
-  				android:layout_below="@id/contacts.separator.syncContacts"
-  				android:layout_centerHorizontal="true"  				
-  				android:drawableLeft="@drawable/sync"   				
-  				android:text="@string/contacts.button.syncContacts"
-  				style="@style/common_button_style" />
-    	    	     	   	    	 	       	    	     	   	    	 	 
-		</RelativeLayout>
-	</ScrollView>
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <!-- Add banned contacts -->
+
+        <TextView
+            android:id="@+id/contacts.separator.addContact"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dip"
+            android:text="@string/contacts.separator.addContact" />
+
+        <Button
+            android:id="@+id/contacts.button.addBanned"
+            style="@style/common_button_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/contacts.separator.addContact"
+            android:layout_centerHorizontal="true"
+            android:drawableLeft="@drawable/add_user"
+            android:text="@string/contacts.button.addBanned" />
+
+        <!-- Remove/edit blocked contact -->
+
+        <TextView
+            android:id="@+id/contacts.separator.removeContact"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_height="match_parent"
+            android:layout_below="@id/contacts.button.addBanned"
+            android:layout_marginTop="5dip"
+            android:text="@string/contacts.separator.removeContact" />
+
+        <Button
+            android:id="@+id/contacts.button.deleteBanned"
+            style="@style/common_button_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/contacts.separator.removeContact"
+            android:layout_centerHorizontal="true"
+            android:drawableLeft="@drawable/remove_user"
+            android:text="@string/contacts.button.deleteBanned" />
+
+        <!-- Synchronize contacts by the user -->
+
+        <View
+            android:id="@+id/contacts.divider1"
+            android:layout_width="match_parent"
+            android:layout_height="3dip"
+            android:layout_below="@id/contacts.button.deleteBanned"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/gradient_black" />
+
+        <TextView
+            android:id="@+id/contacts.separator.syncContacts"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_height="match_parent"
+            android:layout_below="@id/contacts.divider1"
+            android:layout_marginTop="5dip"
+            android:text="@string/contacts.separator.syncContacts" />
+
+        <Button
+            android:id="@+id/contacts.button.syncContacts"
+            style="@style/common_button_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/contacts.separator.syncContacts"
+            android:layout_centerHorizontal="true"
+            android:drawableLeft="@drawable/sync"
+            android:text="@string/contacts.button.syncContacts" />
+    </RelativeLayout>
+
+</ScrollView>
