--- a/quitesleep3/res/layout/help.xml
+++ b/quitesleep3/res/layout/help.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
    	Copyright 2012 Cesar Valiente Gordo
  
         This file is part of CountryListApp.
@@ -18,14 +18,7 @@
     along with CountryListApp.  If not, see <http://www.gnu.org/licenses/>.   
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"     
+<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/webview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-       
-	<WebView  
-	    android:id="@+id/webview"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" />
-	
-</LinearLayout>
+    android:layout_height="match_parent" />
