--- a/quitesleep3/res/layout/list_item.xml
+++ b/quitesleep3/res/layout/list_item.xml
@@ -22,7 +22,7 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     	android:id="@+id/list_item" 
-  		android:layout_width="fill_parent"
+  		android:layout_width="match_parent"
   		android:layout_height="wrap_content"  		  
   		android:textColor="@android:color/white"	
   		android:textSize="25dip"
