--- a/quitesleep3/res/layout/logstab.xml
+++ b/quitesleep3/res/layout/logstab.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--  
+<!--
  	Copyright 2010 Cesar Valiente Gordo
  
  	This file is part of QuiteSleep.
@@ -17,20 +17,19 @@
 
     You should have received a copy of the GNU General Public License
     along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
- -->
+-->
 
-<RelativeLayout
-  	xmlns:android="http://schemas.android.com/apk/res/android"
-  	android:layout_width="fill_parent"
-  	android:layout_height="fill_parent"
-  	android:orientation="vertical" >
-    
-  	  <TextView 
-  			android:layout_width="wrap_content"
-  			android:layout_height="wrap_content"
-  			android:id="@+id/logstab.textview.contact"  		
-  			android:textSize="15dip"
-	  		android:textStyle="bold"
-	  		android:textColor="@color/white"   		  		   	  	
-	  		android:text="name" />	  		
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <TextView
+        android:id="@+id/logstab.textview.contact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="name"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
 </RelativeLayout>
