--- a/quitesleep3/res/layout/main.xml
+++ b/quitesleep3/res/layout/main.xml
@@ -26,17 +26,17 @@
 
 	<LinearLayout
 	   	android:orientation="vertical"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent">
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent">
 	
 	    <com.viewpagerindicator.TitlePageIndicator
 	        android:id="@+id/indicator"
 	        android:layout_height="wrap_content"
-	        android:layout_width="fill_parent" />
+	        android:layout_width="match_parent" />
 	    
 	    <android.support.v4.view.ViewPager
 	        android:id="@+id/pager"
-	        android:layout_width="fill_parent"
+	        android:layout_width="match_parent"
 	        android:layout_height="0dp"
 	        android:layout_weight="1" />         
 	</LinearLayout>
@@ -50,7 +50,7 @@
     	
     	<Button
     		android:id="@id/handle"
-    		android:layout_width="fill_parent"
+    		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:gravity="center"
     		android:text="@string/help_about_sliding_text"    		
@@ -64,14 +64,14 @@
     	    android:orientation="vertical" >    	    
 		   	    <android.support.v4.view.ViewPager
         			android:id="@+id/help_pager"
-			        android:layout_width="fill_parent"
+			        android:layout_width="match_parent"
 			        android:layout_height="0dp"
 			        android:layout_weight="1"/>
 			    <com.viewpagerindicator.CirclePageIndicator
 			        android:id="@+id/help_indicator"
 			        android:padding="10dip"
 			        android:layout_height="wrap_content"
-			        android:layout_width="fill_parent"/>
+			        android:layout_width="match_parent"/>
     	</LinearLayout>    
     </SlidingDrawer>
 
