--- a/quitesleep3/res/layout/quitesleep_notification.xml
+++ b/quitesleep3/res/layout/quitesleep_notification.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--  
+<!--
  	Copyright 2010 Cesar Valiente Gordo
  
  	This file is part of QuiteSleep.
@@ -17,26 +17,24 @@
 
     You should have received a copy of the GNU General Public License
     along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
- -->
+-->
 
-<RelativeLayout		
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:orientation="vertical"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent" >
-		
-		<ImageView
-			android:id="@+id/quitesleep_notification.image"
-			android:layout_width="wrap_content"
-			android:layout_height="fill_parent"
-			android:layout_alignParentLeft="true" />
-		
-		<TextView            
-			android:layout_toRightOf="@id/quitesleep_notification.image"
-			android:layout_alignBaseline="@id/quitesleep_notification.image"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-            android:id="@+id/quitesleep_notification.message"
-            android:text="QuiteSleep Notification" />
-            
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <ImageView
+        android:id="@+id/quitesleep_notification.image"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/quitesleep_notification.message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/quitesleep_notification.image"
+        android:layout_toRightOf="@id/quitesleep_notification.image"
+        android:text="QuiteSleep Notification" />
+
 </RelativeLayout>
