--- a/quitesleep3/res/layout/webview_dialog.xml
+++ b/quitesleep3/res/layout/webview_dialog.xml
@@ -27,8 +27,8 @@
   		
   		<WebView
     		android:id="@+id/webview_content"
-    		android:layout_width="fill_parent"
-    		android:layout_height="fill_parent"
+    		android:layout_width="match_parent"
+    		android:layout_height="match_parent"
     		android:fadingEdge="none" 
     	/>    		
 	</FrameLayout>
